second section done

--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body {
     background-size: cover;
     margin-bottom: 150px;
 }
+
 /**CSS for linear gradient**/
 .grdnt {
     height: 669px;
@@ -25,7 +26,7 @@ body {
 .first-div {
     color: #FFFFFF;
     padding-top: 174px;
-    padding-left: 307px;
+    padding-left: 200px;
     width: 70%;
     margin: 0;
     text-align: center;
@@ -36,13 +37,14 @@ h1 {
     font-weight: 700;
     line-height: 25px;
 }
-h2{
+
+h2 {
     font-family: 'Inter';
-font-style: normal;
-font-weight: 700;
-font-size: 45px;
-line-height: 54px;
-text-align: center;
+
+    font-weight: 700;
+    font-size: 45px;
+    line-height: 54px;
+    text-align: center;
 }
 
 .donate-now-button {
@@ -60,38 +62,104 @@ text-align: center;
     gap: 8px;
     margin: auto;
     font-size: 20px;
-    
+
 }
 
 /**Donate Funds**/
-
-/* .donate-funds{
+.donate-section {
     height: 669px;
-    
-
 }
 
-.donate-3{
+.donate-funds {
+
+    background: #FFFFFF;
+}
+
+.donate-3 {
     margin: auto;
-    display:flex;
-    margin-left:300px;
+    display: block;
+    height: 170px;
+
+    text-align: center;
+
 }
 
-.fund-amount{
+.funds-raise {
+    margin: auto;
+    display: flex;
+    height: 170px;
+    margin-left: 300px;
+    text-align: center;
+
+}
+
+.fund-amount {
+    height: 55px;
+    width: 135px;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(0, 0, 0, 0.02);
+    border-radius: 6px;
+    font-size: 2.1rem;
+    font-weight: 700;
+    color: #777;
+    margin-left: 20px;
+    padding: 43px 22px 44px 22px;
+}
+
+.fund-amount:hover {
+    background: #ffa2a2;
+    color: #fefefe;
+    border: 2px solid #ed4f4f;
+    border-radius: 5px;
+}
+/**Plan section start**/
+.plan-section {
+    height: 669px;
+    background-color: #FFFFFF;
+    text-align: center;
+}
+.plan-category{
+    width: 100%;
+    margin: auto;
+    margin-left: 333px;
+   
+}
+
+.one-third{
+    width: 120px;
+    height: 120px;
+    background: #ffa2a2;
+    margin:auto;
+    display: flex;
     
-    margin-left: 15px;
-    padding:20px ;
-    background: #FAFAFA;
-    font-family: 'Inter';
-font-style: normal;
-font-weight: 700;
-font-size: 30px;
-line-height: 36px;
-text-align: center;
-
-color: #707070;
-width: 135px;
-height: 123px;
-border-radius: 5px;
 }
- */
+
+/**Subscription section**/
+/* .subscription-section{
+    width: 300px;
+    background-color: #dedddd;
+    border: none;
+    padding: 10px;
+    border-radius: 5px 0 0 5px;
+}
+.s-btn a{
+    text-decoration: none;
+    color: white;
+}
+.s-btn{
+    padding: 0 30px;
+    background-color: #FF5959;
+    border: none;
+    border-radius: 0 5px 5px 0;
+}
+.subscribe-btn{
+    padding: 60px 80px;
+    width: 40%;
+    background-color: #fff4d6;
+    margin: 0 auto;
+    border-radius: 10px;
+}
+.subscription-section p{
+    margin: 30px auto;
+} */
