--- a/style.css
+++ b/style.css
@@ -88,7 +88,7 @@ h2 {
     margin: auto;
     display: flex;
     height: 170px;
-    margin-left: 300px;
+    margin-left: 220px;
     text-align: center;
 
 }
@@ -109,57 +109,145 @@ h2 {
 
 .fund-amount:hover {
     background: #ffa2a2;
-    color: #fefefe;
+    color: #000000;
     border: 2px solid #ed4f4f;
     border-radius: 5px;
 }
+
 /**Plan section start**/
 .plan-section {
+    width: 100%;
     height: 669px;
     background-color: #FFFFFF;
     text-align: center;
 }
-.plan-category{
-    width: 100%;
+
+.plan-category {
     margin: auto;
-    margin-left: 333px;
-   
+    display: flex;
+    margin-left: 100px;
+    text-align: left;
+
+
+
+
 }
 
-.one-third{
-    width: 120px;
-    height: 120px;
-    background: #ffa2a2;
-    margin:auto;
-    display: flex;
-    
+.one-third {
+    width: 360px;
+    height: 352px;
+    display: block;
+    border-radius: 5px;
+    margin-left: 10px;
+    text-align: left;
+    padding: 30px;
+    align-items: left;
+    justify-content: left;
+
+}
+
+.one-third img {
+    float: left;
+    width: 70px;
+    height: 70px;
+    margin-left: 5px;
+    margin-top: 5px;
+}
+
+.one-third p {
+    padding: 4px 4px;
+
+}
+
+.first-part {
+    background: rgba(79, 157, 166, 0.1);
+
+}
+
+.second-part {
+    background: rgba(255, 89, 89, 0.1);
+}
+
+.third-part {
+    background: #FFF4D6;
 }
 
 /**Subscription section**/
-/* .subscription-section{
-    width: 300px;
-    background-color: #dedddd;
-    border: none;
-    padding: 10px;
-    border-radius: 5px 0 0 5px;
+.subscription {
+    text-align: center;
 }
-.s-btn a{
-    text-decoration: none;
-    color: white;
+
+.subscription h1 {
+    font-size: 50px;
 }
-.s-btn{
-    padding: 0 30px;
+
+.subscription p {
+    color: rgba(0, 0, 0, 0.623);
+}
+
+.frm {
+    background-color: rgba(255, 255, 0, 0.151);
+    height: 300px;
+    width: 809px;
+    margin-left: 20%;
+    margin-top: 5%;
+    margin-bottom: 10%;
+    display: flex;
+    align-items: center;
+    padding-left: 15%;
+}
+
+.frm-button {
+    color: rgba(255, 255, 255, 0.911);
     background-color: #FF5959;
+    border: 0;
+    padding: 1.5% 7%;
+    margin-left: 15%;
+    border-top-right-radius: 8px;
+    border-bottom-right-radius: 8px;
+    font-size: 20px;
+}
+
+.frm input {
+    background-color: #D9D9D9;
+    border: 0;
+    padding-left: 10%;
+    border-top-left-radius: 8px;
+    border-bottom-left-radius: 8px;
+    height: 53px;
+    width: 200%;
+}
+
+footer {
+    background: #0B0D17;
+    width: auto;
+    height: 177px;
+    text-align: center;
+}
+.gonna{
+    color: #FFFFFF;
+}
+.footer-sectioin{
+    padding-top: 40px;
+}
+
+.humble-text {
+    font-family: 'Lobster', cursive;
+    font-size: 36px;
+    font-weight: 400;
+    line-height: 44px;
+    letter-spacing: 0.5px;
+    color: #FF5959;
+}
+
+
+
+
+input{
     border: none;
-    border-radius: 0 5px 5px 0;
+    border-bottom: 1px solid rgba(145, 131, 131, 0.736);
+    width: 400px;
+    text-align: center;
+    height: 35px;
+    font-weight: 600;
 }
-.subscribe-btn{
-    padding: 60px 80px;
-    width: 40%;
-    background-color: #fff4d6;
-    margin: 0 auto;
-    border-radius: 10px;
-}
-.subscription-section p{
-    margin: 30px auto;
-} */
