--- a/style.css
+++ b/style.css
@@ -83,7 +83,7 @@ h2 {
     text-align: center;
 
 }
-
+/**Raising Funds**/
 .funds-raise {
     margin: auto;
     display: flex;
@@ -92,7 +92,7 @@ h2 {
     text-align: center;
 
 }
-
+/**Amount option**/
 .fund-amount {
     height: 55px;
     width: 135px;
@@ -171,7 +171,22 @@ h2 {
 .third-part {
     background: #FFF4D6;
 }
+/**Gallery section**/
+.all-photos{
+    display: flex;
 
+}
+.volunteer{
+    margin-left: 20px;
+
+}
+.photos {
+    width: 300px;
+    height: 370px;
+    margin-left: 38px;
+    border-radius: 15px;
+    border: 1px sold red;
+}
 /**Subscription section**/
 .subscription {
     text-align: center;
@@ -218,6 +233,7 @@ h2 {
     width: 200%;
 }
 
+/**Footer section**/
 footer {
     background: #0B0D17;
     width: auto;
@@ -241,8 +257,7 @@ footer {
 }
 
 
-
-
+/**Other Amount section**/
 input{
     border: none;
     border-bottom: 1px solid rgba(145, 131, 131, 0.736);
